<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/baseline_search_24"
        android:title="@string/title_app_bar_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/menu_favorite_list"
        android:title="@string/title_menu_favorite_list"
        app:showAsAction="collapseActionView" />

    <item
        android:id="@+id/menu_settings"
        android:title="@string/title_menu_settings"
        app:showAsAction="collapseActionView" />

</menu>