<resources>
    <string name="app_name">MyGithubApp</string>
    <string name="username">username</string>
    <string name="fullname">Nama Lengkap</string>
    <string name="followers">%d followers</string>
    <string name="following">%d following</string>
    <string name="tab_followers">followers</string>
    <string name="tab_following">following</string>
    <string name="search_hint">Cari user Github</string>
    <string name="placeholder">Placeholder</string>
</resources>