<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_favorite"
        android:icon="@drawable/ic_favorite_24dp"
        android:title="@string/title_menu_favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_share"
        android:icon="@drawable/ic_share_24dp"
        android:title="@string/title_menu_share"
        app:showAsAction="ifRoom" />

</menu>