<resources>
    <string name="action_change_language_title">Change language</string>
    <string name="action_logout_title">Logout</string>
    <string name="action_random_marker_title">Highlight random story</string>
    <string name="action_refresh_maps_title">Refresh</string>
    <string name="action_refresh_title">Refresh</string>
    <string name="action_view_maps_title">Show maps</string>
    <string name="activity_main_title">User stories</string>
    <string name="activity_maps_title">User stories on map</string>
    <string name="activity_story_add_title">Add new story</string>
    <string name="activity_story_detail_title">Story Detail</string>
    <string name="app_name">MyStoryApp2</string>
    <string name="btn_add_camera_text">Camera</string>
    <string name="btn_add_gallery_text">Gallery</string>
    <string name="btn_loading_retry">Retry</string>
    <string name="btn_login_text">Login</string>
    <string name="btn_register_text">Register</string>
    <string name="button_add_text">Upload</string>
    <string name="dialog_confirm">Yes</string>
    <string name="dialog_logout_message">Are you sure you want to log out?</string>
    <string name="dialog_logout_title">Logout</string>
    <string name="dialog_reject">No</string>
    <string name="ed_add_description_hint">Add description here</string>
    <string name="ed_login_email_error">Invalid email address</string>
    <string name="ed_login_email_hint">Email</string>
    <string name="ed_login_password_error">Password must be at least 8 characters wide</string>
    <string name="ed_login_password_hint">Password</string>
    <string name="ed_register_name_hint">Name</string>
    <string name="exception_image_too_big">Image is too big!</string>
    <string name="image_chooser_title">Choose a Picture</string>
    <string name="menu_logout_toast">Successfully logged out</string>
    <string name="switch_add_location_text">Attach your current location</string>
    <string name="toast_login_failed">Login failed: %1$s</string>
    <string name="toast_login_greetings">Welcome %1$s</string>
    <string name="toast_login_invalid_input">You have invalid input(s)</string>
    <string name="toast_main_load_failed">Failed to load data: %1$s</string>
    <string name="toast_maps_load_failed">Failed to load data: %1$s</string>
    <string name="toast_register_failed">Register failed: %1$s</string>
    <string name="toast_register_invalid_input">You have invalid input(s)</string>
    <string name="toast_register_success">Thanks for joining us</string>
    <string name="toast_story_add_empty_description">Description can\'t be empty</string>
    <string name="toast_story_add_empty_image">No image loaded, please load image first</string>
    <string name="toast_story_add_failed">Failed: %1$s</string>
    <string name="toast_story_add_load_image_failed">Failed to get image</string>
    <string name="toast_story_add_loading_image">Loading image… This can take a while</string>
    <string name="toast_story_add_location_denied">Location access denied</string>
    <string name="toast_story_add_location_granted_approximate">Granted approximate location</string>
    <string name="toast_story_add_location_granted_precise">Granted precise location</string>
    <string name="toast_story_add_location_not_found">Location is not found. Try again</string>
    <string name="toast_story_add_permission_denied">Permission not granted</string>
    <string name="toast_story_add_success">Successfully add new story</string>
    <string name="toast_story_add_upload_notice">Uploading…</string>
    <string name="toast_story_detail_load_failed">Failed to load data: %1$s</string>
    <string name="tv_description_text">Description</string>
    <string name="tv_item_name_text">Name</string>
    <string name="tv_login_text">Log in to your account</string>
    <string name="tv_login_to_register_text">New here? Register</string>
    <string name="tv_name_string">Name</string>
    <string name="tv_register_text">Create a new account</string>
    <string name="tv_register_to_login_text">Have an account already? Login</string>
    <string name="toast_story_add_geting_location">Getting location…</string>
</resources>